--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "broccoli-asset-rev": "^2.5.0",
     "ember-cli": "^2.14.0",
     "ember-cli-dependency-checker": "^2.0.1",
-    "ember-cli-inject-live-reload": "^1.6.1",
+    "ember-cli-inject-live-reload": "SparshithNR/ember-cli-inject-live-reload#test-refactor",
     "ember-cli-tslint": "^0.1.3",
     "ember-cli-uglify": "^2.0.0-beta.1",
     "qunitjs": "^2.3.3",
